# gemini-splunk-devx-agent

./: Dockerfile  HACKATHON.md  README.md  architecture_diagram.md  pyproject.toml
app/: dashboard.py
scripts/: build_demo_video.py  smoke.py
src/gemini_splunk_devx_agent/: __init__.py  agent.py  mcp_stub.py  runner.py
tests/: test_agent_build.py  test_mcp_stub.py
